k8s/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: spintron-nn
  labels:
    app: spintron-nn
