k8s/service.yaml

apiVersion: v1
kind: Service
metadata:
  name: spintron-service
  namespace: spintron-nn
  labels:
    app: spintron-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: spintron-app
